Fix vertical alignment for buprenorphine checkbox and label since the superscript pushed the text down

--- a/css/style.css
+++ b/css/style.css
@@ -494,6 +494,10 @@ select option[value=""] {
     border: 1px solid #d2d2d2;
 }
 
+label[for=buprenorphine] .flatCheckbox {
+    margin-top: 5px;
+}
+
 .flatCheckbox:after {
     content: "";
     position: absolute;
